--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "reduxsauce": "^1.2.0",
     "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2"
   },
